--- a/Chatter.ConsoleClient/Chatter.ConsoleClient.csproj
+++ b/Chatter.ConsoleClient/Chatter.ConsoleClient.csproj
@@ -2,12 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Chatter.BusinessLogic\Chatter.BusinessLogic.csproj" />
   </ItemGroup>
 
 </Project>
