refactor: use strongly typed http client instead of magic strings

--- a/Chatter.APIClient/Chatter.APIClient.csproj
+++ b/Chatter.APIClient/Chatter.APIClient.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Refit.Newtonsoft.Json" Version="6.1.15" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chatter.BusinessLogic\Chatter.BusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
