--- a/Chatter.WpfClient/Chatter.WpfClient.csproj
+++ b/Chatter.WpfClient/Chatter.WpfClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,6 +21,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Chatter.APIClient\Chatter.APIClient.csproj" />
     <ProjectReference Include="..\Chatter.BusinessLogic\Chatter.BusinessLogic.csproj" />
   </ItemGroup>
   <ItemGroup>
